[package]
name = "most_used_functions"
version = "0.1.0"
authors = ["badar343 <66517064+badar343@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
