[package]
name = "most_used_functions"
version = "0.1.1"
authors = ["https://github.com/badar343/most_used_functions.git"]
edition = "2018"
repository = "https://github.com/badar343/most_used_functions"
homepage = "https://github.com/badar343/most_used_functions"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Library for most used fuctions such as input , mathematical operations."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
