[package]
name = "uh"
version = "0.1.0"
authors = ["https://github.com/yuulive/uh.git"]
edition = "2018"
repository = "https://github.com/yuulive/uh"
homepage = "https://github.com/yuulive/uh"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Library for most used fuctions such as input , mathematical operations."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
